; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_irq.c_vmw_irq_install.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_irq.c_vmw_irq_install.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32, i32 }

@EBUSY = common dso_local global i32 0, align 4
@vmw_irq_handler = common dso_local global i32 0, align 4
@vmw_thread_fn = common dso_local global i32 0, align 4
@IRQF_SHARED = common dso_local global i32 0, align 4
@VMWGFX_DRIVER_NAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmw_irq_install(%struct.drm_device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %8 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @EBUSY, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %3, align 4
  br label %35

14:                                               ; preds = %2
  %15 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %16 = call i32 @vmw_irq_preinstall(%struct.drm_device* %15)
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @vmw_irq_handler, align 4
  %19 = load i32, i32* @vmw_thread_fn, align 4
  %20 = load i32, i32* @IRQF_SHARED, align 4
  %21 = load i32, i32* @VMWGFX_DRIVER_NAME, align 4
  %22 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %23 = call i32 @request_threaded_irq(i32 %17, i32 %18, i32 %19, i32 %20, i32 %21, %struct.drm_device* %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %14
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %35

28:                                               ; preds = %14
  %29 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %30 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %29, i32 0, i32 0
  store i32 1, i32* %30, align 4
  %31 = load i32, i32* %5, align 4
  %32 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %33 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %32, i32 0, i32 1
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %28, %26, %11
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @vmw_irq_preinstall(%struct.drm_device*) #1

declare dso_local i32 @request_threaded_irq(i32, i32, i32, i32, i32, %struct.drm_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
